new api updates

--- a/templates/_partials/_nav.html
+++ b/templates/_partials/_nav.html
@@ -23,5 +23,10 @@
     <li class="nav-item">
       <a class="nav-link {% if p|slice:':8' == '/profile' %}active{% endif %}" href="/profile/">Profile</a>
     </li>
+
+    <li class="nav-item">
+      <a class="nav-link {% if p|slice:':7' == '/plans/' %}active{% endif %}" href="/plans/">Plans</a>
+    </li>
+
   {% endwith %}
 </ul>
